samples/_failures_safe/1761790102_92b5fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40356ccd.c: In function ‘main’:
./samples/SAFE/__tmp_40356ccd.c:155:17: error: expected expression at end of input
  155 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_40356ccd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40356ccd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40356ccd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40356ccd.c:155:17: error: expected declaration or statement at end of input
